--- a/src/index.html
+++ b/src/index.html
@@ -8,17 +8,19 @@
  </head>
  <body>
     <header>
-     <h1 class="encabezado">Investigación de Hitos Históricos y Tecnológicos (1964–1974)</h1>
-     <p class="descripcion">Exploración cronológica de los acontecimientos más relevantes en Cuba durante una década crucial de desarrollo socialista, revolución tecnológica y avances científicos.</p>
+       <nav>
+        <ul>
+          <li><a href="#hitos-historia">buttonHitos Históricos></a></li>
+          <li><a href="#hitos-tecnologia">Hitos Tecnológicos></a></li>    
+          <li><a href="#linea-temporal">Línea del tiempo></a></li>
+        </ul>
+      </nav>  
     </header>
    
     <main>    
-    
-      <div class="menu">      
-      <a href="#hitos-historia"><button>Hitos Históricos</button></a> 
-      <a href="#hitos-tecnologia"><button>Hitos Tecnológicos</button></a>      
-      <a href="#linea-temporal"><button>Línea del tiempo</button></a>
-    </div><hr>
+      <h1 class="encabezado">Investigación de Hitos Históricos y Tecnológicos (1964–1974)</h1>
+     <p class="descripcion">Exploración cronológica de los acontecimientos más relevantes en Cuba durante una década crucial de desarrollo socialista, revolución tecnológica y avances científicos.</p>
+   <hr>
     <!-- Hitos Históricos-->
     <div class="hitos-h" id="hitos-historia">
       <h2>Hitos Históricos</h2>
